# fastapi-task-system

./: .env.example  .gitignore  README.md  db.py  llm_client.py  main.py  models.py  pyproject.toml  utils.py
agents/: orchestrator_agent.py  planner_agent.py  profile_agent.py  quiz_agent.py  resource_agent.py
ai_playground/: test_langchain_llm.py
docs/: a3_project_framework.md
routers/: agent.py  ai.py  materials.py  plans.py  profiles.py  quizzes.py  resources.py  tasks.py  users.py
services/: rag_service.py
sql/: init.sql
static/: index.html
static/css/: style.css
static/js/: app.js
